Each utility has its own version number, date of last change and
some description at the top of its ".c" file. All utilities in the main
directory have their own "man" pages.

Changelog for pre-release smp_utils-1.00 [20211028] [svn: r178]
  - smp_discover, smp_discover_list: when -c is given in
    single line per phy mode, report if attached phy's
    speed capability is higher than each expander phy
  - all utilities that use the --interface=PARAMS option:
    pre-fill the i_params array with zeros
  - lib/smp_aac_io.c (aac interface): fix bounds error
    causing all > 512 byte responses to crash the request
    and hang the aac interface
  - fix gcc 10 compile warnings
  - start using autoconf 2.7

Changelog for smp_utils-0.99 [20200305] [svn: r171]
  - smp_discover(_list): add --dsn option to show
    device slot number in single line per phy summary
    - attached SAS device type, word SAS added (spl4r01)
    - add SAS connector types, shared with NVMe (ses3r8)
    - add buffered phy burst size field (spl4r07)
    - add attached apta capable field
    - update phy capabilities decode (spl5r02)
    - use Report general to get number phys rather
      than loop until an error occurs
  - smp_rep_general: add extended fairness field
    - add initial time to delay expander forward open
      indication field
    - add external port field (spl5r02)
  - smp_phy_test: change default linkrate from 3 to 6 Gbps
    which is value 0xa
  - smp_conf_phy_event: fix file pointer leak
  - add G5 (22.5 Gbps for SAS-4) settings [spl4r06]
  - convert many two valued ints to bools
  - smp_lib:
    - add smp_get_connector_type_str(), smp_get_num_nomult()
      and smp_get_llnum_nomult()
    - add dStrHexErr() and dStrHexStr()
    - add hex2stdout, hex2stderr and hex2str
    - add smp_is_big_endian(), smp_all_zeros() and
      smp_all_ffs()
    - add sg_unaligned.h and sg_pr2serr.h headers
    - change connector name: 'SAS SlimLine' to 'SlimSAS'
  - sync with spl5r08