@@ -66,7 +66,7 @@ corresponding "STP reject to open limit" field to \fIOP\fR. Unit of
 .TP
 \fB\-p\fR, \fB\-\-power\fR=\fIPD\fR
 sets the "update power done timeout" flag and the corresponding "power
-doen timeout" field to \fIPD\fR. Unit of \fIPD\fR is 1 second. A \fIPD\fR
+done timeout" field to \fIPD\fR. Unit of \fIPD\fR is 1 second. A \fIPD\fR
 value of 0 is interpreted as don't change the current value. The
 maximum value of \fIPD\fR is 255 and means the time limit is vendor
 specific.
