@@ -1,4 +1,4 @@
-.TH SMP_DISCOVER "8" "October 2021" "smp_utils\-1.00" SMP_UTILS
+.TH SMP_DISCOVER "8" "February 2022" "smp_utils\-1.00" SMP_UTILS
 .SH NAME
 smp_discover \- invoke DISCOVER SMP function
 .SH SYNOPSIS
@@ -20,10 +20,10 @@ The mpt interface uses \fISMP_DEVICE\fR to identify a HBA (an SMP
 initiator) and needs the additional \fI,N\fR to differentiate between HBAs
 if there are multiple present.
 .PP
-If the \fI\-\-phy=ID\fR option is not given then \fI\-\-summary\fR is
-assumed. When \fI\-\-summary\fR is given or assumed, this utility shows
-the disposition of each active expander phy in table form. One row is shown
-for each phy and is described in the SINGLE LINE PER PHY FORMAT section
+If the \fI\-\-phy=ID\fR option is not given then the \fI\-\-summary\fR
+option is assumed. When \fI\-\-summary\fR is given or assumed, this utility
+shows the disposition of each active expander phy in table form. One row is
+shown for each phy and is described in the SINGLE LINE PER PHY FORMAT section
 below. For this purpose disabled expander phys and those with errors are
 considered "active" and can be suppressed from the output by adding the
 \fI\-\-brief\fR option.
@@ -55,12 +55,12 @@ phy capability field is probably the most interesting. If the
 \fI\-\-verbose\fR option is given, then the various "G" identifiers are
 expanded (e.g. instead of "G4:" it prints "G4 (12 Gbps):").
 .br
-When this option is used with single line per phy output, then the speed
-capabilities of each attached phy is checked. If the speed capabilities
-of an attached phy is greater than that of the expander phy, then that is
-noted. For example if a G5 (22.5 Gbps) HBA is attached to a G4 (12 Gbps) 
-expander then lines in the expander's discovery output associated with the
-attached HBA will have "[att: 22.5 G capable]" appended to them. 
+When this option is used with single line per phy output, then the highest
+speed capable of each attached phy is checked. If the highest speed
+capable of an attached phy is greater than that of the expander phy, then
+that is noted. For example if a G5 (22.5 Gbps) HBA is attached to a G4 (12
+Gbps) expander then lines in the expander's discovery output associated with
+the attached HBA will have "[att: 22.5 G capable]" appended to them. 
 .TP
 \fB\-h\fR, \fB\-\-help\fR
 output the usage message then exit.
@@ -246,7 +246,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2018 Douglas Gilbert
+Copyright \(co 2006\-2022 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
