@@ -19,7 +19,7 @@ additional \fI,N\fR to differentiate between HBAs if there are multiple
 present.
 .PP
 Reports zero or more phy event descriptors. Each descriptor contains a phy
-event source, a phy event (i.e. a count) and a peak value detector theshold.
+event source, a phy event (i.e. a count) and a peak value detector threshold.
 At least one phy event should be maintained for each phy.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
