@@ -21,7 +21,7 @@ present.
 .PP
 Reports zero or more phy event list descriptors. Each descriptor contains a
 phy identifier, a phy event source, a phy event (i.e. a count) and a peak
-value detector theshold. At least one phy event should be maintained for
+value detector threshold. At least one phy event should be maintained for
 each phy.
 .SH OPTIONS
 Mandatory arguments to long options are mandatory for short options as well.
