@@ -36,7 +36,7 @@ integer in the range 0 to 65535. The default value is 1 . If \fISDI\fR is 0
 then no descriptors are placed in the response plus the "starting
 self\-configuration status descriptor index" and "total number of
 self\-configuration status descriptors" fields in the response are both set
-to 0. That makes setting \fISDI\fR to 0 a lot less useful tha it could have
+to 0. That makes setting \fISDI\fR to 0 a lot less useful that it could have
 been. \fISDI\fR may be decimal (default) or
 hexadecimal prefixed by '0x' (or '0X') or with a 'h' (or 'H') suffix.
 .TP
