@@ -1,4 +1,4 @@
-.TH SMP_REP_ZONE_PERM_TBL "8" "June 2011" "smp_utils\-0.96" SMP_UTILS
+.TH SMP_REP_ZONE_PERM_TBL "8" "February 2023" "smp_utils\-1.00" SMP_UTILS
 .SH NAME
 smp_rep_zone_perm_tbl \- invoke REPORT ZONE PERMISSION TABLE function
 .SH SYNOPSIS
@@ -47,7 +47,7 @@ used in conjunction with \fI\-\-permf=FN\fR to append to \fIFN\fR if it
 already exists. If \fIFN\fR does not exist then it is created.
 .TP
 \fB\-B\fR, \fB\-\-bits\fR=\fICOL\fR
-This is an alternate zone permission table represention showing single bits
+This is an alternate zone permission table representation showing single bits
 with the origin (i.e. ZP[0,0]) in the top left. The output is a bit array
 with \fICOL\fR columns and up to \fICOL\fR rows. This output resembles the
 example zone permission tables shown in the SAS draft documents (at t10.org).
@@ -136,7 +136,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2011 Douglas Gilbert
+Copyright \(co 2011\-2023 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
