@@ -1,4 +1,4 @@
-.TH SMP_UTILS "8" "October 2021" "smp_utils\-1.00" SMP_UTILS
+.TH SMP_UTILS "8" "February 2023" "smp_utils\-1.00" SMP_UTILS
 .SH NAME
 smp_* \- invoke a SAS Serial Management Protocol (SMP) function
 .SH SYNOPSIS
@@ -64,14 +64,16 @@ This specifies the MPT fusion SAS pass\-through. The mptsas driver uses
 the '/dev/mptctl' device node (character device major 10, minor 220) while
 the mpt2sas driver uses '/dev/mpt2ctl' device node (major 10, minor 221).
 For the mpt3sas driver the corresponding device node is '/dev/mpt3ctl'.
-The 'modprobe mptctl' or 'modprobe mpt2ctl' command may be needed. If there
-are multiple mpt fusion controllers (HBAs) in the computer, then the user
-will need to specify which one to use with the syntax: '/dev/mptctl,<n>'
-where <n> is the "ioc_num". This number can be found with dmesg after the
-mptsas driver is registered and appears as a suffix to the driver name (e.g.
-mpt2sas0). It can also be found in '/sys/class/scsi_host/host<n>/unique_id'.
-When this interface is used the \fI\-\-sa=SAS_ADDR\fR option must be given
-to specify the SAS address of the SMP target.
+The 'modprobe mptsas', 'modprobe mpt2sas', or 'modprobe mpt3sas' command
+may be needed, but usually if the HBA is present at boot-up, the kernel
+will load the required modules. If there are multiple mpt fusion
+controllers (HBAs) in the computer, then the user will need to specify which
+one to use with the syntax: '/dev/mptctl,<n>' where <n> is the "ioc_num".
+This number can be found with dmesg after the mpt[<n>]sas driver is
+registered and appears as a suffix to the driver name (e.g.  mpt2sas0). It
+can also be found in '/sys/class/scsi_host/host<n>/unique_id'. When this
+interface is used the \fI\-\-sa=SAS_ADDR\fR option must be given to specify
+the SAS address of the SMP target.
 .TP
 \fBsgv4\fR (\fBsg\fR)
 This interface is more generic and supported by several SAS HBA drivers
@@ -345,7 +347,7 @@ Written by Douglas Gilbert.
 .SH "REPORTING BUGS"
 Report bugs to <dgilbert at interlog dot com>.
 .SH COPYRIGHT
-Copyright \(co 2006\-2021 Douglas Gilbert
+Copyright \(co 2006\-2023 Douglas Gilbert
 .br
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
